# wikigame

./: README.md  aio_wikigame.py  build.sbt  pyproject.toml  requirements.txt  wikigame.py
src/main/scala/: Main.scala
src/main/scala/wikigame/wikiapi/: WikiApi.scala
tests/: test_wikiapi.py
wikigame/: __main__.py  search.py  wikiapi.py
